# kondi-core

./: .env.example  .gitignore  AUDIT_ISSUES_SUMMARY.csv  AUDIT_SUMMARY.txt  COMPREHENSIVE_AUDIT_2026-04-02.md  COMPREHENSIVE_SECURITY_REVIEW.md  CRITICAL_FIXES_CHECKLIST.md  EXECUTIVE_SUMMARY_2026-04-02.md  ISSUES_BY_FILE.md  ISSUES_PRIORITIZED.md  README.md  SECURITY_AUDIT_REPORT.md  package-lock.json  package.json  tsconfig.json
.kondi/workspace/: COST_ANALYSIS_SUMMARY.md  COST_FIRST_POLICY.md  E2E_INTEGRATION_TESTS_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  PROBLEM_STATEMENT.md  README.md  REVISION_COMPLETE.md  REVISION_SUMMARY.md  RUNTIME_HARDENING_COMPLETE.md  SHORTCOMINGS_ANALYSIS.md  USAGE_GUIDE.md  WORK_DIRECTIVE.md  benchmark-cost-savings.ts  budget-aware-caller.ts  budget-integration.ts  budget-tracker.test.ts  budget-tracker.ts  cost-aware-llm-caller.ts  cost-benchmark.ts  cost-durability-assessment.md  cost-first.json  cost-policies.ts  cost-tracker.test.ts  cost-tracker.ts  demo-threshold-behavior.ts  example-integration-mock.ts  example-integration.ts  optimist-review.md  phase1-implementation-directive.md  phase1-implementation-summary.md  round3-opportunity-perspective.md  round4-opportunity-perspective.md  run-council-integrated.ts  runtime-hardening.test.ts  (+2 more)
integrations/: LAUNCH-PLAN.md  NEXT-STEPS.md  README.md  build-all.sh  promote.sh  publish-all.sh
integrations/crewai-bridge/: README.md  pyproject.toml
integrations/crewai-bridge/kondi_council_crewai/: __init__.py
(+101 files in other folders)
